# ZeroEngine

./: .gitmodules  CMakeLists.txt  README.md
Code/Libraries/Extensions/: CMakeLists.txt
Code/Libraries/Extensions/CodeTranslator/: CodeSplitWindow.hpp  CodeTranslatorCommands.cpp  CodeTranslatorCommands.hpp  ShaderTranslationDebugHelper.cpp  ShaderTranslationDebugHelper.hpp
Code/Libraries/Extensions/EEPPUI/: CMakeLists.txt  EEPPUIStandard.cpp  EEPPUIStandard.hpp  Precompiled.hpp  border.cpp  border.hpp  keyboardshortcut.cpp  keyboardshortcut.hpp  uiapplication.cpp  uiapplication.hpp  uibackgrounddrawable.cpp  uibackgrounddrawable.hpp  uiborderdrawable.cpp  uiborderdrawable.hpp  uicheckbox.cpp  uicheckbox.hpp  uiclip.cpp  uiclip.hpp  uicodeeditor.cpp  uicodeeditor.hpp  uicombobox.cpp  uicombobox.hpp  uiconsole.cpp  uiconsole.hpp  uidatabind.hpp  uidropdownlist.cpp  uidropdownlist.hpp  uieventdispatcher.cpp  uieventdispatcher.hpp  uifiledialog.cpp  uifiledialog.hpp  uifontstyleconfig.hpp  uigridlayout.cpp  uigridlayout.hpp  uihelper.hpp  uiicon.cpp  uiicon.hpp  uiicontheme.cpp  uiicontheme.hpp  uiiconthememanager.cpp  (+125 more)
Code/Libraries/Extensions/EEPPUI/abstract/: uiabstracttableview.cpp  uiabstracttableview.hpp  uiabstractview.cpp  uiabstractview.hpp
Code/Libraries/Extensions/EEPPUI/css/: animationdefinition.cpp  animationdefinition.hpp  drawableimageparser.cpp  drawableimageparser.hpp  elementdefinition.cpp  elementdefinition.hpp  keyframesdefinition.cpp  keyframesdefinition.hpp  mediaquery.cpp  mediaquery.hpp  propertydefinition.cpp  propertydefinition.hpp  propertyidset.hpp  propertyspecification.cpp  propertyspecification.hpp  shorthanddefinition.cpp  shorthanddefinition.hpp  stylesheet.cpp  stylesheet.hpp  stylesheetlength.cpp  stylesheetlength.hpp  stylesheetparser.cpp  stylesheetparser.hpp  stylesheetpropertiesparser.cpp  stylesheetpropertiesparser.hpp  stylesheetproperty.cpp  stylesheetproperty.hpp  stylesheetpropertyanimation.cpp  stylesheetpropertyanimation.hpp  stylesheetselector.cpp  stylesheetselector.hpp  stylesheetselectorparser.cpp  stylesheetselectorparser.hpp  stylesheetselectorrule.cpp  stylesheetselectorrule.hpp  stylesheetspecification.cpp  stylesheetspecification.hpp  stylesheetstyle.cpp  stylesheetstyle.hpp  stylesheetvariable.cpp  (+5 more)
Code/Libraries/Extensions/EEPPUI/doc/: documentview.cpp  documentview.hpp  foldrangeservice.cpp  foldrangeservice.hpp  foldrangetype.hpp  syntaxcolorscheme.cpp  syntaxcolorscheme.hpp  syntaxdefinition.cpp  syntaxdefinition.hpp  syntaxdefinitionmanager.cpp  syntaxdefinitionmanager.hpp  syntaxhighlighter.cpp  syntaxhighlighter.hpp  syntaxtokenizer.cpp  syntaxtokenizer.hpp  textdocument.cpp  textdocument.hpp  textdocumentline.hpp  textformat.cpp  textformat.hpp  textposition.hpp  textrange.hpp  textundostack.cpp  textundostack.hpp
Code/Libraries/Extensions/EEPPUI/models/: csspropertiesmodel.hpp  filesystemmodel.cpp  filesystemmodel.hpp  itemlistmodel.hpp  model.cpp  model.hpp  modeleditingdelegate.hpp  modelindex.cpp  modelindex.hpp  modelrole.hpp  modelselection.cpp  modelselection.hpp  persistentmodelindex.cpp  persistentmodelindex.hpp  sortingproxymodel.cpp  sortingproxymodel.hpp  variant.hpp  widgettreemodel.cpp  widgettreemodel.hpp
Code/Libraries/Extensions/Editor/: AddWindow.cpp  AddWindow.hpp  AnimationEditor.cpp  AnimationEditor.hpp  AnimationEditorData.cpp  AnimationGraph.cpp  AnimationScrubber.cpp  AnimationTrackView.cpp  AppCommands.cpp  BackgroundTask.cpp  BackgroundTaskUi.cpp  BasicGizmos.cpp  BasicGizmos.hpp  CMakeLists.txt  ClothTools.cpp  ClothTools.hpp  CollisionTableEditor.cpp  CollisionTableEditor.hpp  ColorGradientEditor.cpp  ColorPicker.cpp  ColorScheme.cpp  ConsoleUi.cpp  ContentLogic.cpp  ContentUploader.cpp  CreationCommands.cpp  CurveEditor.cpp  CurveEditor.hpp  Document.hpp  DocumentationCommands.cpp  Editor.cpp  Editor.hpp  EditorCameraMouseDrag.cpp  EditorCommands.cpp  EditorDrop.cpp  EditorHotspots.cpp  EditorImport.cpp  EditorMain.cpp  EditorProject.cpp  EditorProject.hpp  EditorScriptObject.hpp  (+77 more)
Code/Libraries/Extensions/Gameplay/: CameraViewport.cpp  CameraViewport.hpp  DefaultGame.cpp  DefaultGame.hpp  EmscriptenExportTarget.cpp  Exporter.cpp  Exporter.hpp  Importer.cpp  IndexedHalfEdgeMesh.hpp  MarchingCubes.hpp  MarchingSquares.cpp  MarchingSquares.hpp  Orientation.cpp  Orientation.hpp  PlayGame.cpp  QuickHull3DBindings.hpp  RandomContext.cpp  RandomContext.hpp  ReactiveViewport.cpp  ReactiveViewport.hpp  TileMap.cpp  UnitTestSystem.cpp  UnitTestSystem.hpp  WindowsExportTarget.cpp  Zero.cpp  Zero.hpp
Code/Libraries/Extensions/Pretty/: CMakeLists.txt  Node.cpp  Node.hpp  Precompiled.hpp  PrettyStandard.cpp  PrettyStandard.hpp
Code/Libraries/Extensions/TBUI/: CMakeLists.txt  TBUI.cpp  TBUI.hpp  TBUIBatch.cpp  TBUIBatch.hpp  TBUIBitmap.cpp  TBUIContainer.cpp  TBUIContainer.hpp  TBUIDemo.cpp  TBUIDemo.hpp  TBUIManager.cpp  TBUIManager.hpp  TBUIRenderer.cpp  TBUIRenderer.hpp  TBUIStandard.cpp  TBUIStandard.hpp  TBUISystem.cpp  TBUIView.cpp  TBUIView.hpp  TBUIWidget.hpp
Code/Libraries/Extensions/UiWidget/: UiLayout.hpp  UiRootWidget.cpp  UiRootWidget.hpp  UiStackLayout.cpp  UiWidget.cpp  UiWidget.hpp  UiWidgetEvents.hpp
Code/Libraries/Extensions/Widget/: Button.cpp  Command.hpp  CommandBinding.cpp  Composite.cpp  Composite.hpp  ContextMenu.cpp  ContextMenu.hpp  Controls.cpp  EditText.cpp  Events.hpp  Layout.cpp  Layout.hpp  ListControls.cpp  MainWindow.cpp  MainWindow.hpp  Modal.cpp  (+18 more)
Code/Libraries/Renderer/: CMakeLists.txt
Code/Libraries/Renderer/Gpu/: CMakeLists.txt  Gpu.cpp  Gpu.hpp  GpuStandard.hpp  Precompiled.hpp
Code/Libraries/Renderer/GpuDX/: CMakeLists.txt  Precompiled.hpp
Code/Libraries/Renderer/GpuGL/: CMakeLists.txt  GpuGL.cpp  GpuGLStandard.hpp  Precompiled.hpp
Code/Libraries/Systems/: CMakeLists.txt
Code/Libraries/Systems/GraphicsNext/: CMakeLists.txt  GraphicsNextEngine.cpp  GraphicsNextEngine.hpp  GraphicsNextSpace.cpp  GraphicsNextSpace.hpp  GraphicsNextStandard.cpp  GraphicsNextStandard.hpp  Precompiled.hpp
Data/ZilchCustomPluginTemplate/: RESOURCE_NAME_.vcxproj
(+1127 files in other folders)
